# csb_webshop

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
account/: admin.py  models.py
account/migrations/: 0001_initial.py
basket/: apps.py  basket.py  urls.py  views.py
store/: admin.py  context_processor.py  models.py  searchresult.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_product_updated_alter_product_created.py  0003_alter_product_image.py
templates/store/: base.html  category.html  filter.html  home.html  product.html
templates/store/basket/: summary.html
webshop/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
