[tool.poetry]
name = "csb-webshop"
version = "0.1.0"
description = ""
authors = ["r-elsa <elsaryynanen@outlook.com>"]
readme = "README.md"
packages = [{include = "csb_webshop"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
